<resources>
    <string name="app_name">Society Connect:A Smart Apartment Management App</string>


    <string name="settings">Settings</string>
    //header
    <string name="header_name">Name</string>
    <string name="header_about">About</string>
    //drawer
    <string name="home" translatable="true">Home</string>
    <string name="profile">Profile</string>
    <string name="society_members">Society Members</string>
    <string name="emergency">Emergency Contact</string>
    <string name="staff">Staff</string>
    <string name="complain">Complain</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="circular">Circular</string>
    <string name="vendors">Vendors</string>
    <string name="visitor">Visitors</string>
    <string name="parking">Parking</string>
    <string name="delivery">Delivery</string>

    //drawer
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>

    <string name="splash">Splash_Screen</string>
    //home
    <string name="LOGIN">LOGIN</string>
    <string name="Society_connect">Society Connect:A Smart Apartment Management App</string>
    <string name="Society_pic">Society Pic</string>
    <string name="gallery">Gallery</string>
    <string name="email">Email:</string>
    <string name="email_hint">email</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone">Phone:</string>
    <string name="d_p">description</string>
    <string name="num">8390913817</string>
    <string name="email_h">Email:</string>
    <string name="email_home">gcasckcs20@gmail.com</string>
    <string name="twitter">https://twitter.com/</string>
    <string name="twitter_">Twitter</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_link">https://m.facebook.com</string>
    <string name="copyright">Copyright</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="instagram">Instagram</string>
    <string name="inst_url">https://instagram.com</string>
    <string name="location">Location</string>

    //Profile
    <string name="float_content">contact_pic</string>
    <string name="name">Name</string>
    <string name="name_hint">name</string>
    <string name="about">About</string>
    <string name="email_p">Email</string>
    <string name="p_phone">Phone</string>
    <string name="description">description</string>
    <string name="save_id">Save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="remove">Remove</string>
    <string name="gallary">Gallery</string>
    <string name="camera">Camera</string>

    //Contact
    <string name="C_name">Name</string>
    <string name="Cont_name">name</string>
    <string name="C_phone_number">Phone Number</string>
    <string name="Cont_phone_number">phone number</string>
    <string name="_91">+91</string>
    <string name="C_save">Save</string>

    //login

    <string name="log_in">Log In</string>
    <string name="sign_in">SIGN IN</string>
    <string name="otp">OTP</string>
    <string name="email_id">Email ID</string>
    <string name="send_otp">Send OTP</string>
    <string name="password">Password</string>
    <string name="underline"><u>Create Account</u></string>
    <string name="underline1"><u>Create Password</u></string>
    <string name="name1">Name :</string>
    <string name="underline2"><u>LOG IN</u></string>
    <string name="underline3"><u>Forgot Password?</u></string>
    <string name="room_no">Flat No. :</string>
    <string name="verify_mobile_no">Verify Mobile No</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No.</string>
    <string name="verification_of_mobile_no"><u>Verification Of Mobile No</u></string>
    <string name="verification_of_otp"><u>Verification Of OTP</u></string>
    <string name="enter_otp_sent_to_your_mobile_no">Enter OTP sent to your Mobile No.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_password">Enter Password :</string>
    <string name="enter_email_id">Enter Email ID :</string>
    <string name="new_user">New User?</string>
    <string name="cont_pic">Cont_pic</string>
    <string name="down_arrow">down_arrow</string>
    <string name="send_otp_1">SEND OTP</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="done">done</string>
    <string name="resend">resend</string>
    <string name="register">Register</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>

    //Complain
    <string name="my_complaints">My Complaints</string>
    <string name="complaints">Complaints</string>
    <string name="string_complaints" />
    <string name="string_string_complaints">complaints</string>
    <string name="title"><u>Log A Complaint</u></string>
    <string name="descriptionC">Description :</string>
    <string name="log_a_complaint">LOG A COMPLAINT</string>
    <string name="complaint_type_drop">COMPLAINT TYPE :</string>
    <string name="category">CATEGORY :</string>
    <string name="description_content">DESCRIPTION :</string>
    <string name="Select">select</string>
    <string name="mention_in_few_words">Mention in few words.</string>
    <string name="button">Button</string>
    <string name="write_your_complaint_here">Write your complaint here.</string>
    <string name="save">SAVE</string>
    <string name="actionbtn">actionBtn</string>
    <string name="addImage">Button</string>
    <string name="add_image">Add Image</string>
    <string name="image">Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="complaint_type">Complaint Type :</string>
    <string name="personal">Personal</string>

    <string name="fb">fb</string>
    <string name="sm">sm</string>
    <string name="header_email">email</string>
    <string name="header_phone">phone</string>
    <string name="call">call</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">COMPLAINTS</string>
    <string name="tab_text_2">MY COMPLAINTS</string>

    //society members
    <string name="select_wing">SELECT WING</string>
    <string name="wing_a">Wing A</string>
    <string name="wing_b">Wing B</string>
    <string name="wing_c">Wing C</string>
    <string name="wing_d">Wing D</string>
    <string name="permanent">Permanent</string>
    <string name="guest">Guest</string>
    <string name="time_out">time out</string>
    <string name="time_in">Time In :</string>
    <string name="vehical_type">Vehical Type:</string>
    <string name="vehical_no">vehical no</string>
    <string name="wing">Wing:</string>
    <string name="enter_room_no">Enter Room No.</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="enter_contact_no">Enter contact No.</string>
    <string name="enter_total_no_of_members">Enter Total No. of Members</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="details">Details</string>

    //Bill PAYMENT
    <string name="payments">PAYMENTS</string>
    <string name="choose_payments">CHOOSE PAYMENTS</string>
    <string name="maintenance">MAINTENANCE</string>
    <string name="rent">RENT</string>
    <string name="utility">UTILITY</string>
    <string name="my_payments">MY PAYMENTS</string>
    <string name="log_details">Log Details</string>
    <string name="delivery_boy_contact_no">delivery boy contact no</string>
    <string name="receiver_name">receiver name</string>

    <string name="contact_no">Contact No. :</string>
    <string name="days">Days :</string>
    <string name="availability">availability</string>
    <string name="type">Type:</string>
    <string name="delivery_boy_name">delivery boy name</string>
    <string name="date">Date :</string>
    <string name="time">Time:</string>
    <string name="type_of_delivery">Type of Delivery:</string>
    <string name="ex_food_delivery">ex:food delivery</string>
    <string name="flat_no">Flat No:</string>
    <string name="logout">LOGOUT</string>
    <string name="update">Update</string>

    <string name="availibility">Availibility</string>
    <string name="days_availability">days availability</string>
    <string name="_l">___________________________________________________</string>
    <string name="name_of_the_owner">Name of the Owner</string>
    <string name="room_no_">Room No.</string>
    <string name="date_">Date</string>
    <string name="time_">Time</string>
    <string name="name_">Name :</string>
    <string name="visitor_s_name">Visitor\'s Name</string>
    <string name="visitor_s_contact_no">Visitor\'s Contact No.</string>
    <string name="guest_of">Guest Of :</string>
    <string name="flat_no_">Flat No. :</string>
    <string name="name_of_room_owner_">Name of Room Owner</string>
    <string name="upload_from_gallery">Upload From Gallery</string>

    <string name="enter_amount_to_be_paid">Enter amount to be paid</string>
    <string name="pay">PAY</string>

</resources>