<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/ic_deli"
            android:title="@string/delivery" />
        <item
            android:id="@+id/nav_parking"
            android:icon="@drawable/ic_parking"
            android:title="@string/parking" />
        <item
            android:id="@+id/nav_visitor"
            android:icon="@drawable/ic_visitor"
            android:title="@string/visitor" />
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_vendors"
            android:title="@string/vendors" />
        <item
            android:id="@+id/nav_circular"
            android:icon="@drawable/ic_circular2"
            android:title="@string/circular" />
        <item
            android:id="@+id/nav_bill_payment"
            android:icon="@drawable/ic_bill"
            android:title="@string/bill_payment" />
        <item
            android:id="@+id/nav_complain"
            android:icon="@drawable/ic_comp"
            android:title="@string/complain" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_staff"
            android:title="@string/staff" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_emergency"
            android:title="@string/emergency" />
        <item
            android:id="@+id/nav_intercom"
            android:icon="@drawable/ic_inter_com"
            android:title="Intercom"
            />
        <item
            android:id="@+id/nav_society_members"
            android:icon="@drawable/ic_group"
            android:title="@string/society_members" />'
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_r"
            android:title="Logout" />
    </group>

</menu>