<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="10dp" android:paddingTop="10dp" android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginStart="40dp" android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp" android:text="@string/p_phone"
        android:textSize="20sp" android:textStyle="bold"/>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:text="@string/_91"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <EditText android:id="@+id/ed_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Cont_phone_number"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="10"
            android:autofillHints=""/>
    </RelativeLayout>
</LinearLayout>