<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    tools:context=".Nav_HeaderActivity">

<RelativeLayout
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:cropToPadding="true"
            android:src="@drawable/ic_baseline_account_circle_24" />
</RelativeLayout>
    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/header_name"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/header_about"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="30dp"
            android:text="@string/header_phone"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/em"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="30dp"
            android:text="@string/header_email"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>



</LinearLayout>