<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ScrollViewCount">
    <include
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        layout="@layout/app_bar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingTop="10dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="?android:textColorPrimary" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/email"
                    android:layout_margin="15dp"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="?android:textColorPrimary" />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:layout_below="@id/pass"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/b1"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="550dp"
                android:layout_marginBottom="100dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/n1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/new_user"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@id/n1"
                    android:background="?attr/colorPrimaryVariant"
                    android:text="@string/register"
                    android:textColor="#ffffff"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>
        </RelativeLayout>

        </ScrollView>

    </FrameLayout>
</RelativeLayout>